# LBFFS

./: .gitignore  LICENSE  README.md  README_ja.md  README_jp.md  runScriptOnColab.ipynb
D3Q19/: CMakeLists.txt  D3Q19.hpp  Poiseuille2D.pvsm  boundaryCondition.hpp  boundaryCondition_channelFlow.hpp  cal_rho_u_v.hpp  initialization.hpp  input.txt  ns.cpp  restart.hpp  write.hpp
D3Q19/Cavity2D/: Cavity2D.pvsm  input.txt
D3Q19/Poiseuille2D/: Poiseuille2D.pvsm  input.txt
D3Q19_LKS/: CMakeLists.txt  LKS.cpp  LKS.hpp  boundaryCondition.hpp  boundaryCondition_cavityFlow.hpp  input.cpp  ns.cpp  write.hpp
D3Q19_LKS_arrayfire/: CMakeLists.txt  LKS.cpp  boundaryCondition_cavityFlow3dDiagonal.hpp  boundaryCondition_poiseuilleFlow.hpp  initialization.hpp  ns.cpp  restart.hpp
D3Q19_LKS_gpu/: CMakeLists.txt  LKS.hpp  input.hpp  ns.cpp  write.hpp
D3Q19_LKS_opencl/: CMakeLists.txt  input.cpp  input.txt  kernel.cl  ns.cpp  write.hpp
D3Q19_opencl/: CMakeLists.txt  D3Q19.hpp  boundaryCondition_PoiseuilleFlow.hpp  boundaryCondition_backStepFlow.hpp  boundaryCondition_cavityFlow.hpp  boundaryCondition_cavityFlow2d.hpp  boundaryCondition_cavityFlow3dDiagonal.hpp  boundaryCondition_channelFlow.hpp  boundaryCondition_flowAroundCylinder.hpp  boundaryConditionsBackStepFlow.txt  boundaryConditionsCavityFlow.txt  boundaryConditionsFlowAroundCar.txt  boundaryConditionsPoiseuilleFlow.txt  initialization.hpp  input.hpp  input.txt  inputBackStepFlow.txt  inputCavityFlow.txt  inputFlowAroundCar.txt  inputPoiseuilleFlow.txt  kernel.cl  ns.cpp  setBoundaryConditions.hpp  settingsForBackStepFlow.hpp  settingsForCavityFlow.hpp  settingsForChannelFlow.hpp  settingsForFlowAroundCylinder.hpp  settingsForPoiseuilleFlow.hpp  stl.hpp  walls.hpp  write.hpp
D3Q19_opencl/testCases/backStepFlow/: backStep.pvsm  backStep_ave.pvsm  boundaryConditions.txt  boundaryConditionsBackStepFlow.txt  input.txt  inputBackStepFlow.txt  plot.ipynb  run.sh  x00.csv  x01.csv  x02.csv  x03.csv  x04.csv  x05.csv  x06.csv  x07.csv  x08.csv  x09.csv  x10.csv
D3Q19_opencl/testCases/cavityFlow/: boundaryConditions.txt  boundaryConditionsCavityFlow.txt  inputCavityFlow.txt  plot.ipynb  run.sh  u_x05.csv
D3Q19_opencl/testCases/flowAroundCar/: boundaryConditions.txt  boundaryConditionsFlowAroundCar.txt  flowAroundCar.pvsm  input.txt  inputFlowAroundCar.txt  run.sh
D3Q19_opencl/testCases/flowAroundCylinder/: boundaryConditions.txt  boundaryConditionsFlowAroundCylinder.txt  inputFlowAroundCylinder.txt  outlets.stl  plot.ipynb  post.sh  run.sh
D3Q19_opencl/testCases/flowAroundCylinderIBM/: flowAroundCylinderIBM.pvsm  inputFlowAroundCylinderIBM.txt  plot.ipynb
D3Q19_opencl/testCases/poiseuilleFlow/: inputPoiseuilleFlow.txt  plot.ipynb  u.csv
D3Q27_opencl/: CMakeLists.txt  D3Q27.hpp  initialization.hpp  kernel.cl  ns.cpp  restart.hpp  write.hpp
src/: base.hpp  input.hpp  walls.hpp
testCases/backStepFlow/: backStep.pvsm  backStepBoxes.stl  backStep_ave.pvsm  run.sh  x00.csv  x01.csv  x02.csv  x04.csv  x05.csv  x08.csv  x09.csv
testCases/cavityFlow/: cavityFlow.pvsm  plot.ipynb  run.sh  runD3Q27.sh
testCases/flowAroundCar/: run.sh
testCases/flowAroundCylinder/: boundaryConditions.txt  cylinder.stl  plot.ipynb  plotDensity.ipynb  run.sh  runD3Q27.sh
testCases/flowAroundCylinderIBM/: boundaryConditions.txt  post.sh
testCases/poiseuilleFlow/: plot.ipynb  poiseuilleFlow.pvsm  run.sh  runD3Q27.sh
